--- a/index.html
+++ b/index.html
@@ -25,18 +25,34 @@
             </ul>
     </div>
     <div class="top-bar">
-        <div>Search Icon</div>
+        <div id="search-icon">
+            <svg style="width:24px;height:24px" viewBox="0 0 24 24">
+                <path fill="currentColor" d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z" />
+            </svg>
+        </div>
         <input type="text" id="searchbar">
-        <div>Bell Icon</div>
-        <div>Profile Icon</div>
-        <div>Profile Name</div>
+        <div id="bell-icon">
+            <svg style="width:24px;height:24px" viewBox="0 0 24 24">
+                <path fill="currentColor" d="M21,19V20H3V19L5,17V11C5,7.9 7.03,5.17 10,4.29C10,4.19 10,4.1 10,4A2,2 0 0,1 12,2A2,2 0 0,1 14,4C14,4.1 14,4.19 14,4.29C16.97,5.17 19,7.9 19,11V17L21,19M14,21A2,2 0 0,1 12,23A2,2 0 0,1 10,21M19.75,3.19L18.33,4.61C20.04,6.3 21,8.6 21,11H23C23,8.07 21.84,5.25 19.75,3.19M1,11H3C3,8.6 3.96,6.3 5.67,4.61L4.25,3.19C2.16,5.25 1,8.07 1,11Z" />
+            </svg>
+        </div>
+        <div>
+            <svg style="width:24px;height:24px" viewBox="0 0 24 24">
+                <path fill="currentColor" d="M20,2H4C2.89,2 2,2.89 2,4V20C2,21.11 2.89,22 4,22H20C21.11,22 22,21.11 22,20V4C22,2.89 21.11,2 20,2M20,20H4V4H20M8.83,10.25L7.29,8.71L6,10V6H10L8.71,7.29L10.25,8.83M13.75,8.83L15.29,7.29L14,6H18V10L16.71,8.71L15.17,10.25M15.17,13.75L16.71,15.29L18,14V18H14L15.29,16.71L13.75,15.17M10.25,15.17L8.71,16.71L10,18H6V14L7.29,15.29L8.83,13.75" />
+            </svg>
+        </div>
+        <div id="profile-icon">
+            <img src="images/penguin.jpg" alt="Profile picture of User">
+        </div>
     </div>
     <div class="nav-bar">
         <div class="profile-space">
-            <div id="profile-icon">Profile Icon</div>
+            <div>
+                <img src="images/penguin.jpg" alt="Profile picture of User">
+            </div>
             <div id="profile-info">
-                <div>Hi There</div>
-                <div>UserName (UserID)</div>
+                <div>Hi There!,</div>
+                <div>Penguin (@penguininice)</div>
             </div>
         </div>
         <div class="buttons">
@@ -50,25 +66,44 @@
             <div>Your Projects</div>
             <div class="project-cards">
                 <div>
-                    <div class="heading">Basic Landing Page</div>
-                    <div class="info">A Simple Landing page created using HTML and CSS</div>
+                    <div class="heading">Super Cool Project</div>
+                    <div class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                        Est sit amet facilisis magna etiam tempor. Rhoncus aenean vel elit scelerisque mauris pellentesque pulvinar.</div>
                 </div>
                 <div>
-                    <div class="heading">Rock Paper Scissors</div>
-                    <div class="info">A Player to Computer Rock Paper Scissors game made using HTML, CSS and Vanilla JavaScript</div>
+                    <div class="heading">Lesser Cool Project</div>
+                    <div class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                        Est sit amet facilisis magna etiam tempor. Rhoncus aenean vel elit scelerisque mauris pellentesque pulvinar.</div>
                 </div>
                 <div>
-                    <div class="heading">Etch a Sketch</div>
-                    <div class="info">A Etch a Sketch with Rainbow and black coloring options, and resizable upto 64 x 64 size. Done using HTML, CSS and JavaScript.</div>
+                    <div class="heading">Easy Project</div>
+                    <div class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                        Est sit amet facilisis magna etiam tempor. Rhoncus aenean vel elit scelerisque mauris pellentesque pulvinar.</div>
                 </div>
                 <div>
-                    <div class="heading">Calculator</div>
-                    <div class="info">A Simple Calculator using HTML, CSS and JavaScript.
-                        This calculator performs simple arithmetic functions with decimal values, Also supports keyboard inputs.</div>
+                    <div class="heading">Ultra mega Complex Project</div>
+                    <div class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                        Est sit amet facilisis magna etiam tempor. Rhoncus aenean vel elit scelerisque mauris pellentesque pulvinar.</div>
                 </div>
                 <div>
-                    <div class="heading">Sign up Form</div>
-                    <div class="info">A Simple and Responsive sign up form made using Html and CSS</div>
+                    <div class="heading">Template Project</div>
+                    <div class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                        Est sit amet facilisis magna etiam tempor. Rhoncus aenean vel elit scelerisque mauris pellentesque pulvinar.</div>
+                </div>
+                <div>
+                    <div class="heading">Project made out of bordom</div>
+                    <div class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                        Est sit amet facilisis magna etiam tempor. Rhoncus aenean vel elit scelerisque mauris pellentesque pulvinar.</div>
+                </div>
+                <div>
+                    <div class="heading">Practice Project</div>
+                    <div class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                        Est sit amet facilisis magna etiam tempor. Rhoncus aenean vel elit scelerisque mauris pellentesque pulvinar.</div>
+                </div>
+                <div>
+                    <div class="heading">Use Case Project</div>
+                    <div class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                        Est sit amet facilisis magna etiam tempor. Rhoncus aenean vel elit scelerisque mauris pellentesque pulvinar.</div>
                 </div>
             </div>
         </div>
@@ -95,31 +130,39 @@
         <div class="trending-space">
             <div>Trending</div>
             <div class="profile">
-                <div>Icon</div>
                 <div>
-                    <div>Profile-ID</div>
-                    <div>Profile Description</div>
+                    <img src="images/Polar-bear.jpg" alt="Other User 1">
+                </div>
+                <div>
+                    <div>@whitebear</div>
+                    <div>Apex predator</div>
                 </div>
             </div>
             <div class="profile">
-                <div>Icon</div>
                 <div>
-                    <div>Profile-ID</div>
-                    <div>Profile Description</div>
+                    <img src="images/walrus.jpg" alt="Other User 2">
+                </div>
+                <div>
+                    <div>@twobigtuskswithwhiskers</div>
+                    <div>Chubby Walrus boi</div>
                 </div>
             </div>
             <div class="profile">
-                <div>Icon</div>
                 <div>
-                    <div>Profile-ID</div>
-                    <div>Profile Description</div>
+                    <img src="images/seal.jpg" alt="Other User 3">
+                </div>
+                <div>
+                    <div>@earlessiceseal</div>
+                    <div>Nothing is more delicious than a fish in water</div>
                 </div>
             </div>
             <div class="profile">
-                <div>Icon</div>
                 <div>
-                    <div>Profile-ID</div>
-                    <div>Profile Description</div>
+                    <img src="images/artic-fox.jpg" alt="Other user 4">
+                </div>
+                <div>
+                    <div>@icyfox</div>
+                    <div>Enjoying life with my pack</div>
                 </div>
             </div>
         </div>
