--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             </div>
         </div>
         <div class="announcements-space">
-            <div>Annonucements</div>
+            <div>Announcements</div>
             <div class="announcements-info">
                 <div>
                     <div>Site Maintanance</div>
@@ -129,40 +129,42 @@
         </div>
         <div class="trending-space">
             <div>Trending</div>
-            <div class="profile">
-                <div>
-                    <img src="images/Polar-bear.jpg" alt="Other User 1">
+            <div class="profile-cards">
+                <div class="profile">
+                    <div>
+                        <img src="images/Polar-bear.jpg" alt="Other User 1">
+                    </div>
+                    <div>
+                        <div>@whitebear</div>
+                        <div>Apex predator</div>
+                    </div>
                 </div>
-                <div>
-                    <div>@whitebear</div>
-                    <div>Apex predator</div>
+                <div class="profile">
+                    <div>
+                        <img src="images/walrus.jpg" alt="Other User 2">
+                    </div>
+                    <div>
+                        <div>@twobigtuskswithwhiskers</div>
+                        <div>Chubby Walrus boi</div>
+                    </div>
                 </div>
-            </div>
-            <div class="profile">
-                <div>
-                    <img src="images/walrus.jpg" alt="Other User 2">
+                <div class="profile">
+                    <div>
+                        <img src="images/seal.jpg" alt="Other User 3">
+                    </div>
+                    <div>
+                        <div>@earlessiceseal</div>
+                        <div>Nothing is more delicious than a fish in water</div>
+                    </div>
                 </div>
-                <div>
-                    <div>@twobigtuskswithwhiskers</div>
-                    <div>Chubby Walrus boi</div>
-                </div>
-            </div>
-            <div class="profile">
-                <div>
-                    <img src="images/seal.jpg" alt="Other User 3">
-                </div>
-                <div>
-                    <div>@earlessiceseal</div>
-                    <div>Nothing is more delicious than a fish in water</div>
-                </div>
-            </div>
-            <div class="profile">
-                <div>
-                    <img src="images/artic-fox.jpg" alt="Other user 4">
-                </div>
-                <div>
-                    <div>@icyfox</div>
-                    <div>Enjoying life with my pack</div>
+                <div class="profile">
+                    <div>
+                        <img src="images/artic-fox.jpg" alt="Other user 4">
+                    </div>
+                    <div>
+                        <div>@icyfox</div>
+                        <div>Enjoying life with my pack</div>
+                    </div>
                 </div>
             </div>
         </div>
