Add style to last two trending profile IDs.

--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                         <img src="images/seal.jpg" alt="Other User 3">
                     </div>
                     <div>
-                        <div>@earlessiceseal</div>
+                        <div style="width: fit-content;">@earlessiceseal</div>
                         <div>Nothing is more delicious than a fish in water</div>
                     </div>
                 </div>
@@ -318,7 +318,7 @@
                         <img src="images/artic-fox.jpg" alt="Other user 4">
                     </div>
                     <div>
-                        <div>@icyfox</div>
+                        <div style="width: fit-content;">@icyfox</div>
                         <div>Enjoying life with my pack</div>
                     </div>
                 </div>
